<resources>
    <string name="app_name">LabAccess</string>
    <string name="title_home">Home</string>
    <string name="title_access_log">Escanear</string>
    <string name="title_settings">Configuraciones</string>

    <string name="title_access_cards">Tarjetas</string>
    <string name="title_assign_labs">Laboratorios</string>
    <string name="title_access_history">Historial</string>
    <string name="title_lab_usage">Usos</string>
    <string name="title_user_management">Administrar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="time_slot_array">
        <item>8:00 - 9:30</item>
        <item>9:30 - 11:00</item>
        <item>11:00 - 12:30</item>
        <item>12:30 - 14:00</item>
        <item>14:00 - 15:30</item>
        <item>15:30 - 17:00</item>
        <item>17:00 - 18:30</item>
        <item>18:30 - 20:00</item>
    </string-array>
    <string-array name="day_of_week_array">
        <item>Lunes</item>
        <item>Martes</item>
        <item>Miércoles</item>
        <item>Jueves</item>
        <item>Viernes</item>
        <item>Sábado</item>
    </string-array>
</resources>